05 Sep 2003 mipsator
 * improved parser engine again (first part).
 * new pmk language style (no longer need leading dot) but keep
	compat with 0.6 release.
 * adapted pmk to new engine.
 * adapted pmkscan to new engine.
 * added stuff to parse variables in strings (deactived).
 * misc related stuff.
 * fixed and enabled variable parsing in pmk_define().

# snapshot 0.6.1

02 Sep 2003 mipsator
 * added byte_order_check() in pmksetup to set HW_BYTEORDER.

01 Sep 2003 mipsator
 * added invert_bool() and get_comp_path() in functool.
 * improved language checking and compiler path setting in func.
 * small improvement of pmk_target().
 * cleaned po_get_data() use in func.

30 Aug 2003 mipsator
 * added VARNAME in CHECK_BINARY to specify alternate storage variable.
 * fixed deinstall target in Makefile.

28 Aug 2003 mipsator
 * added missing checks.
 * style.

23 Aug 2003 mipsator
 * added switches support.
 * update man pages about switches.

# PMK 0.6 released

23 Aug 2003 mipsator
 * changes for 0.6 release.

# snapshot 0.5.6

22 Aug 2003 mipsator
 * misc fixes

# snapshot 0.5.5

21 Aug 2003 mipsator
 * changed type of DEPEND, it must be a list now.
 * LIST in TARGET command is now of the list type.
 * allow use of lists in pmkscan data file.
 * added code to set the language of a check in pmkscan.
 * updated pmkfile.5 man page.
 * added arguments to pmkscan (-v -h and optional path).
 * added pmkscan.1 man page.

20 Aug 2003 mipsator
 * added hash_add_array_adv() in hash.
 * add support for isblank() in compat.

18 Aug 2003 mipsator
 * added po_get_str() and po_get_list in pmk_obj.

17 Aug 2003 mipsator
 * fixed a small bug in depend_check().
 * finished parser improvement for list parsing.

16 Aug 2003 mipsator
 * added po_dup() in pmk_obj.

15 Aug 2003 mipsator
 * added po_append() to pmk_obj.
 * adapted solution of dynarray to hash functions.
 * sync with new hash functions.

14 Aug 2003 mipsator
 * found a better solution to handle structure freeing in dynarray.